--- a/TweetRoulette/package.json
+++ b/TweetRoulette/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Spencer Ford",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "twitter": "^1.7.1"
+  }
 }
